Fix second menu overflow issue, adjust menu behavior to handle long menu items names, fix gulp-server alias

--- a/dev/sass/blocks/header.sass
+++ b/dev/sass/blocks/header.sass
@@ -14,18 +14,21 @@
   overflow: hidden
   background-color: $color-accent
   +gs()
-  box-shadow: 0 1px 2px -1px $color-dark
 
   // links
   &__links
     +gs-column(9)
+
     @media screen and (max-width: 600px)
       +gs-column(11)
+
     & li
       display: inline-block
       margin: 0 10px
+
       @media screen and (max-width: 960px)
         margin: 0 7px
+
     & a
       color: $color-light
       font-family: $font-serif
@@ -47,6 +50,7 @@
     text-align: right
     border: none
     transition: color .5s
+
     @media screen and (max-width: 600px)
       +gs-column(1)
       margin-left: 0
@@ -58,12 +62,14 @@
       color: $color-light
       font-size: 20px
       transition: color .5s
+
       @media screen and (max-width: 600px)
         margin-right: 0
 
     &.is-open,
     &.is-closed
       display: block
+
     &:hover, &:hover:before
       color: $color-dark
 
@@ -74,19 +80,19 @@
   background-color: $color-light
   +gs()
   margin-top: 40px
-  box-shadow: 0 1px 2px -1px $color-dark
+  box-shadow: inset 0 1px 2px -1px $color-dark, 0 1px 2px -1px $color-dark
+  transform: translateY(0)
   transition: all .5s
 
 
   &.is-closed
-    margin-top: -40px
-    @media screen and (max-width: 960px)
-      margin-top: -100%
+    transform: translateY(-100%)
 
   &__logo
     display: block
     position: absolute
     top: 0
+    bottom: 0
     left: 20px
     width: 80px
     color: $color-light
@@ -98,6 +104,7 @@
     text-align: center
     background-color: $color-accent
     border: none
+    box-shadow: inset 0 1px 2px -1px $color-dark
 
     @media screen and (max-width: 960px)
       display: none
@@ -111,11 +118,13 @@
       border-top: 30px solid $color-accent
       border-left: 40px solid transparent
       border-right: 40px solid transparent
+
     & span
       position: relative
       display: block
       width: 100%
       height: 100%
+
       &:after
         content: ""
         position: absolute
@@ -126,6 +135,7 @@
         background-color: transparent
         box-shadow: 0 1px 2px -1px $color-dark
         transform: rotate(-37deg)
+
       &:before
         content: ""
         position: absolute
@@ -142,12 +152,24 @@
 .menu
   +gs-column(12)
   text-align: right
+  padding-left: 100px
+
   @media screen and (max-width: 960px)
+    padding-left: 0
     text-align: center
+
+  & ul
+    padding-top: 20px
+    padding-bottom: 20px
+
+    @media screen and (max-width: 960px)
+      padding-top: 0
+      padding-bottom: 0
 
   & li
     display: inline-block
     margin-left: 18px
+
     @media screen and (max-width: 960px)
       margin: 0 9px
       display: block
@@ -155,12 +177,12 @@
       border-bottom: 1px dashed $color-darken
 
     & a
-      line-height: 80px
+      line-height: 40px
       font-size: 20px
       transition: color .5s
+
       @media screen and (max-width: 960px)
         font-size: 18px
-        line-height: 2
         border-bottom: none
 
       &.is-selected, &:hover
